Prevent appearance of shelve button when cropped

--- a/styles/sass/spine/_cropped.scss
+++ b/styles/sass/spine/_cropped.scss
@@ -30,6 +30,11 @@
 		&.bleed #glue:before {
 			left: 0px;
 			}
+			
+		&.shelved button#shelve,
+		&.unshelved button#shelve {
+		  display:none;
+		}
 
 		/* #### Cropped and Scrolled */
 		&.skimmed:not(.unshelved) {
